--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,9 @@ tables~=3.8.0
 pillow~=8.4.0
 torch-cluster
 torch-geometric==2.2.0
-torch-scatter
-torch-sparse
+torch-scatter==2.0.9
+torch-sparse==0.6.13
+torch-spline-conv==1.2.1
+rpy2==3.5.14
+lifelines==0.27.8
+
